resizing output text

--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -2,18 +2,51 @@
   height: 2em;
   margin-bottom: 1em;
   padding: 0 0.5em;
-  border-radius: 0.3em;
+
   font-size: 3em;
   line-height: 1.9em;
-  text-align: end;
+  text-align: right;
+
   border-bottom: solid 0.1em var(--dark);
+  border-radius: 0.3em;
+
   background-color: var(--light);
+}
+
+.smaller {
+  height: 4em;
+  margin-bottom: 2em;
+  padding: 0 0.5em;
+
+  font-size: 1.5em;
+  line-height: 3.8em;
+  text-align: right;
+
+  border-bottom: solid 0.2em var(--dark);
+  border-radius: 0.6em;
+
+  background-color: var(--light);
+}
+
+.smallest {
+  height: 6em;
+  margin-bottom: 3em;
+  padding: 0 1.5em;
+
+  font-size: 1em;
+  line-height: 1.5em;
+
+  border-bottom: solid 0.3em var(--dark);
+  border-radius: 0.9em;
+
+  overflow-wrap: anywhere;
+
+  overflow-y: scroll;
   scroll-behavior: smooth;
-  overflow-x: scroll;
 }
 
 ::-webkit-scrollbar {
-  height: 0.1em;
+  width: 0.3em;
 }
 
 /* Track */
