--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -1,8 +1,19 @@
-:root {
+.light {
   --base: #efeeee;
   --text: black;
   --light: #fff7;
   --dark: #d1cdc777;
   --border: #fff4;
   --shadow: #0002;
+  --background: white;
+}
+
+.dark {
+  --base: #313130;
+  --text: #dee;
+  --light: #ffe1;
+  --dark: #0006;
+  --border: #0001;
+  --shadow: #0008;
+  --background: #212120;
 }
